--- a/src/app/features/layout/layout.component.html
+++ b/src/app/features/layout/layout.component.html
@@ -1,4 +1,4 @@
 <div class="layout-container">
-    <span class="layout-container__header">Layout</span>
+    <span class="layout-container__header">Star Wars battle</span>
     <router-outlet></router-outlet>
 </div>
