feat(battlefield): Rename components

--- a/src/app/features/battlefield-container/battlefield-container.component.html
+++ b/src/app/features/battlefield-container/battlefield-container.component.html
@@ -7,7 +7,7 @@
   </mat-select>
 </mat-form-field>
 
-<app-cards-container 
+<swapi-cards-container 
     *ngIf="selectedResource" 
     [dataSource]="selectedResource">
-</app-cards-container>
+</swapi-cards-container>
