--- a/src/app/features/single-card/singe-card.component.html
+++ b/src/app/features/single-card/singe-card.component.html
@@ -10,8 +10,7 @@
 </mat-card>
 
 <ng-template #loading>
-    Loading...
-    <!-- add loader -->
+    <mat-spinner></mat-spinner>
 </ng-template>
 
 <ng-template #noData>
