--- a/src/app/features/battlefield-container/battlefield-container.component.html
+++ b/src/app/features/battlefield-container/battlefield-container.component.html
@@ -1,13 +1,12 @@
 <mat-form-field appearance="fill">
   <mat-label>Select resource</mat-label>
-  <mat-select [(value)]="selectedResource">
+  <mat-select [(value)]="selectedResource" (selectionChange)="setNewResource()">
     <mat-option *ngFor="let resource of resources" [value]="resource.value">
-      {{ resource.name }}
+      {{ resource.name | uppercase }}
     </mat-option>
   </mat-select>
 </mat-form-field>
 
 <swapi-cards-container 
-    *ngIf="selectedResource" 
-    [dataSource]="selectedResource">
+    *ngIf="selectedResource">
 </swapi-cards-container>
