--- a/src/app/features/battlefield-container/single-card/singe-card.component.html
+++ b/src/app/features/battlefield-container/single-card/singe-card.component.html
@@ -1,12 +1,15 @@
-<mat-card>
-    <div *ngIf="isLoaded; else loading">
-        <!-- style! -->
-        <div *ngIf="!!cardData; else noData">
-            {{ cardTitle }} 
-            {{ cardData.name }} 
-            {{ cardData.comparableValue }}
-        </div>
-    </div>
+<mat-card class="card">
+    <ng-container *ngIf="isLoaded; else loading">
+        <ng-container *ngIf="!!cardData; else noData">
+            <mat-card-header class="card__header">
+              <mat-card-title>{{ cardTitle }} </mat-card-title>
+              <mat-card-subtitle>{{ cardData.name }}</mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+                {{ cardData.comparableValue }}
+            </mat-card-content>
+        </ng-container>
+    </ng-container>
 </mat-card>
 
 <ng-template #loading>
@@ -14,5 +17,5 @@
 </ng-template>
 
 <ng-template #noData>
-    No data to display.
+    <span class="no-data">No data to display.</span>
 </ng-template>
