--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,9 +5,14 @@
 $white: #ffffff;
 $black: #000000;
 
+$banana-yellow: #ffe81f;
+
+$light-gray: #f9f9f9;
+
 // *******************************
 //            LAYOUT
 // *******************************
 
+$large: 2rem;
 $regular: 1.5rem;
 $small: 1.2rem;
