--- a/src/app/features/layout/layout.component.html
+++ b/src/app/features/layout/layout.component.html
@@ -1,4 +1,6 @@
 <div class="layout-container">
-    <span class="layout-container__header">Star Wars battle</span>
+    <h1 class="layout-container__header">
+        {{ 'Star Wars battle' | uppercase }}
+    </h1>
     <router-outlet></router-outlet>
 </div>
