--- a/src/app/features/layout/layout.component.scss
+++ b/src/app/features/layout/layout.component.scss
@@ -1,11 +1,15 @@
 @import 'variables';
+@import 'mixins';
 
 .layout-container {
-    min-height: calc(100vh - 6rem);
+    @include flex-center;
+    @include starry-background;
+
+    flex-direction: column;
+    min-height: 100vh;
     padding: 3rem 2rem;
 
     &__header {
-        font-size: $regular;
-        color: $black;
+        color: $banana-yellow;
     }
 }
