--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,27 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'mixins';
+@import 'variables';
 
-html, body { height: 100%; font-size: 10px; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+* {
+    box-sizing: border-box; 
+}
+
+html, body { 
+    height: 100%; 
+    font-size: 10px; 
+}
+
+body { 
+    margin: 0; 
+    font-family: 'Raleway', sans-serif;
+}
+
+.card__header {
+    .mat-card-header-text {
+        @include flex-center;
+        flex-direction: column;
+    }
+}
+
+.mat-form-field-appearance-fill .mat-form-field-flex {
+    background-color: $white;
+}
