feat(spinner): Add spinner styles

--- a/src/app/features/battlefield-container/cards-container/cards-container.component.html
+++ b/src/app/features/battlefield-container/cards-container/cards-container.component.html
@@ -26,6 +26,5 @@
 </div>
 
 <ng-template #loading>
-    <mat-spinner></mat-spinner>
-    <!-- move to shared -->
+    <mat-spinner class="spinner__main"></mat-spinner>
 </ng-template>
