--- a/src/app/features/battlefield-container/single-card/singe-card.component.html
+++ b/src/app/features/battlefield-container/single-card/singe-card.component.html
@@ -13,7 +13,7 @@
 </mat-card>
 
 <ng-template #loading>
-    <mat-spinner></mat-spinner>
+    <mat-spinner class="spinner__small" color="accent"></mat-spinner>
 </ng-template>
 
 <ng-template #noData>
