--- a/src/app/features/battlefield-container/cards-container/cards-container.component.html
+++ b/src/app/features/battlefield-container/cards-container/cards-container.component.html
@@ -9,9 +9,7 @@
         </swapi-single-card>
     </div>
 
-    <div *ngIf="battleResult" class="result">
-        {{ battleResult }}
-    </div>
+    <span class="result">{{ battleResult }}</span>
 </ng-container>
 
 <div class="card-container__information">
