--- a/src/app/features/battlefield-container/single-card/singe-card.component.html
+++ b/src/app/features/battlefield-container/single-card/singe-card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="card"> {{isLoaded}}
+<mat-card class="card">
     <ng-container *ngIf="isLoaded; else loading">
         <ng-container *ngIf="!!cardData; else noData">
             <mat-card-header class="card__header">
@@ -6,7 +6,7 @@
               <mat-card-subtitle>{{ cardData.name }}</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content>
-                {{ dataSourceComparableValue + ': ' + cardData.comparableValue | uppercase}}
+                {{ ValuesEnum[(dataSourceComparableValue | uppercase)] + ': ' + cardData.comparableValue }}
             </mat-card-content>
         </ng-container>
     </ng-container>
