feat(players): Add readable player numbers

--- a/src/app/features/battlefield-container/cards-container/cards-container.component.html
+++ b/src/app/features/battlefield-container/cards-container/cards-container.component.html
@@ -5,7 +5,7 @@
             [cardId]="cardId"
             class="card-container__single-card"
             (commonValueToCompare)="addComparableValue(index, $event)"
-            cardTitle='Player {{ index }}'
+            cardTitle='Player {{ index + 1 }}'
             (isCardLoaded)="isCardLoaded($event)">
         </swapi-single-card>
     </div>
